--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,8 +1,15 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
+    xmlns:opencv="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.handgame.MainActivity"
-    tools:ignore="MergeRootFrame" />
+    android:layout_height="match_parent" >
 
+    <org.opencv.android.JavaCameraView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:visibility="gone"
+        android:id="@+id/handgame_surface_view"
+        opencv:show_fps="true"
+        opencv:camera_id="any" />
+
+</FrameLayout>
