--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -12,4 +12,42 @@
         opencv:show_fps="true"
         opencv:camera_id="any" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" 
+        android:paddingTop="50dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp">
+
+        <Button
+            android:id="@+id/GameButton"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/GameButton" />
+
+        <Button
+            android:id="@+id/CalibrationButton"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/CalibrationButton" />
+
+        <Button
+            android:id="@+id/SettingsButton"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/SettingsButton" />
+
+        <Button
+            android:id="@+id/ExitButton"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/ExitButton" />
+
+    </LinearLayout>
+
 </FrameLayout>
